--- a/front/recipes.html
+++ b/front/recipes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartRecipe</title>
+    <title>Рецепты - SmartRecipe</title>
     <link rel="stylesheet" href="css/styles-recipes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,9 +17,9 @@
             <ul class="nav-links">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="recipes.html">Рецепты</a></li>
-                <li><a href="#">Планы питания</a></li>
+                <li><a href="plans.html">Планы питания</a></li>
                 <li><a href="about.html">О нас</a></li>
-                <li><a href="#" class="profile-btn">Профиль</a></li>
+                <li><a href="profile.html" class="profile-btn">Профиль</a></li>
             </ul>
         </nav>
     </header>
