--- a/front/profile.html
+++ b/front/profile.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body vlink="#fff" alink="#fff">
     <!-- Навигационная панель -->
@@ -15,10 +16,10 @@
         <nav class="navbar">
             <a href="index.html" class="logo"><div class="smart">Smart</div>.Recipe</a>
             <ul class="nav-links">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="recipes.html">Рецепты</a></li>
-                <li><a href="plans.html">Планы питания</a></li>
-                <li><a href="about.html">О нас</a></li>
+                <li><a href="index.html" class="head">Главная</a></li>
+                <li><a href="recipes.html" class="head">Рецепты</a></li>
+                <li><a href="plans.html" class="head">Планы питания</a></li>
+                <li><a href="about.html" class="head">О нас</a></li>
                 <li><a href="profile.html" class="profile-btn">Профиль</a></li>
             </ul>
         </nav>
@@ -64,21 +65,30 @@
                 <img src="images/lasagna.png" alt="Лазанья">
                 <h3>Лазанья из свиной шейки</h3>
                 <p>650Р</p>
-                <span>4.5 ★★★★☆</span>
+                <div class="stars">
+                    <h5>4.5</h5>
+                    <span>★★★★☆</span>
+                </div>                
                 <a href="recipe.html" class="btn-small">Посмотреть</a>
             </div>
             <div class="recipe-card">
                 <img src="images/beef.png" alt="Тушёная говядина">
                 <h3>Тушёная говядина</h3>
                 <p>650Р</p>
-                <span>4.5 ★★★★☆</span>
+                <div class="stars">
+                    <h5>4.5</h5>
+                    <span>★★★★☆</span>
+                </div>                
                 <a href="recipe.html" class="btn-small">Посмотреть</a>
             </div>
             <div class="recipe-card">
                 <img src="images/sandwich.png" alt="Сэндвич">
                 <h3>Сэндвич с яйцом пашот</h3>
                 <p>650Р</p>
-                <span>4.5 ★★★★☆</span>
+                <div class="stars">
+                    <h5>4.5</h5>
+                    <span>★★★★☆</span>
+                </div>                
                 <a href="recipe.html" class="btn-small">Посмотреть</a>
             </div>
         </div>
@@ -95,21 +105,30 @@
                 <img src="images/lasagna.png" alt="Лазанья">
                 <h3>Лазанья из свиной шейки</h3>
                 <p>650Р</p>
-                <span>4.5 ★★★★☆</span>
+                <div class="stars">
+                    <h5>4.5</h5>
+                    <span>★★★★☆</span>
+                </div>                
                 <a href="recipe.html" class="btn-small">Посмотреть</a>
             </div>
             <div class="recipe-card">
                 <img src="images/beef.png" alt="Тушёная говядина">
                 <h3>Тушёная говядина</h3>
                 <p>650Р</p>
-                <span>4.5 ★★★★☆</span>
+                <div class="stars">
+                    <h5>4.5</h5>
+                    <span>★★★★☆</span>
+                </div>
                 <a href="recipe.html" class="btn-small">Посмотреть</a>
             </div>
             <div class="recipe-card">
                 <img src="images/sandwich.png" alt="Сэндвич">
                 <h3>Сэндвич с яйцом пашот</h3>
                 <p>650Р</p>
-                <span>4.5 ★★★★☆</span>
+                <div class="stars">
+                    <h5>4.5</h5>
+                    <span>★★★★☆</span>
+                </div>
                 <a href="recipe.html" class="btn-small">Посмотреть</a>
             </div>
         </div>
@@ -132,7 +151,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#">О нас</a></li>
+                    <li><a href="about.html">О нас</a></li>
                     <li><a href="#">Контакты</a></li>
                     <li><a href="#">Политика конфиденциальности</a></li>
                     <li><a href="#">Условия использования</a></li>
