--- a/front/about.html
+++ b/front/about.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body vlink="#fff" alink="#fff">
     <!-- Навигационная панель -->
@@ -15,10 +16,10 @@
         <nav class="navbar">
             <a href="index.html" class="logo"><div class="smart">Smart</div>.Recipe</a>
             <ul class="nav-links">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="recipes.html">Рецепты</a></li>
-                <li><a href="plans.html">Планы питания</a></li>
-                <li><a href="about.html">О нас</a></li>
+                <li><a href="index.html" class="head">Главная</a></li>
+                <li><a href="recipes.html" class="head">Рецепты</a></li>
+                <li><a href="plans.html" class="head">Планы питания</a></li>
+                <li><a href="about.html" class="head click">О нас</a></li>
                 <li><a href="profile.html" class="profile-btn">Профиль</a></li>
             </ul>
         </nav>
@@ -77,7 +78,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#">О нас</a></li>
+                    <li><a href="about.html">О нас</a></li>
                     <li><a href="#">Контакты</a></li>
                     <li><a href="#">Политика конфиденциальности</a></li>
                     <li><a href="#">Условия использования</a></li>
